--- a/StatusBarDemo/en.lproj/SBDViewController.xib
+++ b/StatusBarDemo/en.lproj/SBDViewController.xib
@@ -34,7 +34,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="523615898">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="72783752">
@@ -46,6 +46,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 20}</string>
 								<reference key="NSSuperview" ref="72783752"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="774585933"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -75,6 +76,7 @@
 						</array>
 						<string key="NSFrame">{{0, -20}, {320, 20}}</string>
 						<reference key="NSSuperview" ref="523615898"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="30356906"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="360345508">
@@ -89,13 +91,14 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIView" id="305607782">
 								<reference key="NSNextResponder" ref="774585933"/>
-								<int key="NSvFlags">301</int>
+								<int key="NSvFlags">-2147483347</int>
 								<array class="NSMutableArray" key="NSSubviews">
 									<object class="IBUIImageView" id="4219032">
 										<reference key="NSNextResponder" ref="305607782"/>
 										<int key="NSvFlags">301</int>
 										<string key="NSFrameSize">{300, 272}</string>
 										<reference key="NSSuperview" ref="305607782"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="206106358"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor" id="946902636">
@@ -118,6 +121,7 @@
 										<int key="NSvFlags">269</int>
 										<string key="NSFrame">{{0, 322}, {300, 21}}</string>
 										<reference key="NSSuperview" ref="305607782"/>
+										<reference key="NSWindow"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -145,6 +149,7 @@
 										<int key="NSvFlags">301</int>
 										<string key="NSFrame">{{54, 84}, {193, 72}}</string>
 										<reference key="NSSuperview" ref="305607782"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="617587056"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -178,6 +183,7 @@
 										<int key="NSvFlags">301</int>
 										<string key="NSFrame">{{93, 206}, {114, 72}}</string>
 										<reference key="NSSuperview" ref="305607782"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1060625957"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -199,6 +205,7 @@
 								</array>
 								<string key="NSFrame">{{10, 58}, {300, 356}}</string>
 								<reference key="NSSuperview" ref="774585933"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="4219032"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="946902636"/>
@@ -208,6 +215,7 @@
 						</array>
 						<string key="NSFrameSize">{320, 548}</string>
 						<reference key="NSSuperview" ref="523615898"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="305607782"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">5</int>
@@ -240,6 +248,8 @@
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="72783752"/>
 				<reference key="IBUIBackgroundColor" ref="360345508"/>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
